--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-to-print": "^2.14.15",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
